# llm-calling

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
src/llm_calling/: anthropic.py  deepseek.py  errors.py  gemini.py  openai.py  router.py  types.py
src/provider_runtime/: __init__.py  _adapter_runtime.py  _artifact_validation.py  anthropic.py  catalog.py  cloudflare.py  embeddings.py  endpoints.py  errors.py  gemini.py  lowering.py  openai.py  openai_compatible.py  openrouter.py  runtime.py  structured_output.py  testing.py  tool_arguments.py  types.py  usage.py
tests/: test_anthropic.py  test_catalog.py  test_deepseek.py  test_embeddings.py  test_errors.py  test_gemini.py  test_lowering.py  test_negative_gates.py  test_openai.py  test_openai_compatible.py  test_public_api.py  test_router.py  test_runtime.py  test_testing.py  test_transcription.py  test_types.py  test_usage.py
tests/fixtures/anthropic/: success_nonstream.json  success_stream_chunks.txt
tests/fixtures/deepseek/: error_context_too_large.json  success_nonstream.json  success_stream_chunks.txt
tests/fixtures/openai_compatible/: error_401.json  error_500.json  success_nonstream.json  success_stream_chunks.txt
tests/live/: test_provider_matrix.py
