[project]
name = "provider-runtime"
version = "0.1.0"
description = "Small async Python package for provider-level LLM calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provider_runtime"]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pyright>=1.1.410",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = [
    "src",
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
